# agentic_store_operations

./: .coveragerc  .gitignore  .insights.yml  .looper.yml  .pre-commit-config.yaml  .sentinelpolicy  CHANGELOG.md  Dockerfile  Makefile  README.md  Store Operations Agent Plan 1.md  Store Operations Agent Plan 2.md  Store Operations Chat.md  concord.yml  pyproject.toml  sonar-project.properties  store_agent.db
.github/: CODEOWNERS  pull_request_template.md
config/: prod.json  qa.json
makefile_scripts/: check_roster.py
tests/: conftest.py
tests/src/algorithms/: test_break_modeling.py  test_learning_bias.py  test_schedule_shortfall.py
tests/src/infra/: test_schemas_and_db.py
tests/src/services/: test_adjustment_service.py  test_compliance_rules.py  test_orchestrator.py  test_services_api.py
tests/src/utils/: mocked_dev_json.py  mocked_prod_json.py  mocked_qa_json.py  test_roster_utils.py
walmart_ahmedkobtan_agentic_store_operations/data/configs/: compliance_rules.yaml  constraints.yaml  forecasting_guardrails.yaml
walmart_ahmedkobtan_agentic_store_operations/data/roster/: employees.csv
walmart_ahmedkobtan_agentic_store_operations/models/: prophet.pkl
walmart_ahmedkobtan_agentic_store_operations/services/: adjustment_service.py  compliance_service.py  forecast_service.py  scheduler_service.py
walmart_ahmedkobtan_agentic_store_operations/src/algorithms/: backtest.py  forecast.py  forecast_how_next7d.py  how_backtest.py  how_baseline.py  learning.py  make_role_targets.py  schedule_solver.py
walmart_ahmedkobtan_agentic_store_operations/src/app/: main.py
(+20 files in other folders)
